table align right fixed for number

--- a/src/presentation/shared/table/Cell.module.scss
+++ b/src/presentation/shared/table/Cell.module.scss
@@ -17,3 +17,6 @@
 .cell_span:hover {
   cursor: pointer;
 }
+.cell_align_right {
+  text-align: right;
+}
